Added missing variable
Fixes failing build

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,3 +6,5 @@ percona_server_tools_reset_ib_logfile: false
 percona_server_tools_reset_ib_logfile_ib_logfiles:
   - /var/lib/mysql/ib_logfile0
   - /var/lib/mysql/ib_logfile1
+
+percona_server_tools_setup_slave_replication: false
