Use RESET SLAVE ALL
https://www.percona.com/blog/2013/04/17/reset-slave-vs-reset-slave-all-disconnecting-a-replication-slave-is-easier-with-mysql-5-5/

--- a/tasks/setup-slave-replication.yml
+++ b/tasks/setup-slave-replication.yml
@@ -56,7 +56,7 @@
     - percona-server-tools-setup-slave-replication-stop-slave
 
 - name: setup slave replication | reset slave
-  command: "mysql -e \"RESET SLAVE;\""
+  command: "mysql -e \"RESET SLAVE ALL;\""
   changed_when: false
   when: inventory_hostname in percona_server_tools_setup_slave_replication_slaves
   tags:
