--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,13 +1,9 @@
 # defaults file for percona-server-tools
 ---
-percona_server_tools_reset_root_password: false
+percona_server_tools_reset_root_password: {}
 
-percona_server_tools_reset_ib_logfile: false
-percona_server_tools_reset_ib_logfile_ib_logfiles:
-  - /var/lib/mysql/ib_logfile0
-  - /var/lib/mysql/ib_logfile1
+percona_server_tools_reset_ib_logfile: {}
 
-percona_server_tools_setup_slave_replication: false
+percona_server_tools_setup_slave_replication: {}
 
-percona_server_tools_setup_master_replication:
-  run: false
+percona_server_tools_setup_master_replication: {}
