--- a/tasks/setup-master-replication.yml
+++ b/tasks/setup-master-replication.yml
@@ -2,14 +2,14 @@
 ---
 - name: setup master replication | create (backup) directory
   file:
-    path: "{{ percona_server_tools_setup_slave_replication.innobackupex.backup_dir }}"
+    path: "{{ percona_server_tools_setup_master_replication.innobackupex.backup_dir }}"
     state: absent
   when: inventory_hostname == percona_server_tools_setup_master_replication.inventory.master1
   tags:
     - percona-server-tools-setup-master-replication-create-backup-directory
 
 - name: setup master replication | make a backup
-  command: "innobackupex --no-timestamp{% if percona_server_tools_setup_slave_replication.innobackupex.user is defined %} --user={{ percona_server_tools_setup_slave_replication.innobackupex.user }} {% endif %}{% if percona_server_tools_setup_slave_replication.innobackupex.password is defined %} --password='{{ percona_server_tools_setup_slave_replication.innobackupex.password }}' {% endif %}{% if percona_server_tools_setup_slave_replication.innobackupex.parallel is defined and percona_server_tools_setup_slave_replication.innobackupex.parallel > 1 %} --parallel={{ percona_server_tools_setup_slave_replication.innobackupex.parallel }} {% endif %}{% if percona_server_tools_setup_slave_replication.innobackupex.rsync is defined and percona_server_tools_setup_slave_replication.innobackupex.rsync %} --rsync {% endif %} {{ percona_server_tools_setup_slave_replication.innobackupex.backup_dir }}"
+  command: "innobackupex --no-timestamp{% if percona_server_tools_setup_master_replication.innobackupex.user is defined %} --user={{ percona_server_tools_setup_master_replication.innobackupex.user }} {% endif %}{% if percona_server_tools_setup_master_replication.innobackupex.password is defined %} --password='{{ percona_server_tools_setup_master_replication.innobackupex.password }}' {% endif %}{% if percona_server_tools_setup_master_replication.innobackupex.parallel is defined and percona_server_tools_setup_master_replication.innobackupex.parallel > 1 %} --parallel={{ percona_server_tools_setup_master_replication.innobackupex.parallel }} {% endif %}{% if percona_server_tools_setup_master_replication.innobackupex.rsync is defined and percona_server_tools_setup_master_replication.innobackupex.rsync %} --rsync {% endif %} {{ percona_server_tools_setup_master_replication.innobackupex.backup_dir }}"
   register: make_a_backup
   failed_when: "make_a_backup.rc != 0 or make_a_backup.stderr.split('\n')[-1].find('completed OK') == -1"
   when: inventory_hostname == percona_server_tools_setup_master_replication.inventory.master1
@@ -17,7 +17,7 @@
     - percona-server-tools-setup-master-replication-make-a-backup
 
 - name: setup master replication | prepare the backup
-  command: "innobackupex --apply-log {% if percona_server_tools_setup_slave_replication.innobackupex.user is defined %} --user={{ percona_server_tools_setup_slave_replication.innobackupex.user }} {% endif %}{% if percona_server_tools_setup_slave_replication.innobackupex.password is defined %} --password='{{ percona_server_tools_setup_slave_replication.innobackupex.password }}' {% endif %}{% if percona_server_tools_setup_slave_replication.innobackupex.use_memory is defined %} --use-memory={{ percona_server_tools_setup_slave_replication.innobackupex.use_memory }} {% endif %} {{ percona_server_tools_setup_slave_replication.innobackupex.backup_dir }}"
+  command: "innobackupex --apply-log {% if percona_server_tools_setup_master_replication.innobackupex.user is defined %} --user={{ percona_server_tools_setup_master_replication.innobackupex.user }} {% endif %}{% if percona_server_tools_setup_master_replication.innobackupex.password is defined %} --password='{{ percona_server_tools_setup_master_replication.innobackupex.password }}' {% endif %}{% if percona_server_tools_setup_master_replication.innobackupex.use_memory is defined %} --use-memory={{ percona_server_tools_setup_master_replication.innobackupex.use_memory }} {% endif %} {{ percona_server_tools_setup_master_replication.innobackupex.backup_dir }}"
   register: prepare_a_backup
   failed_when: "prepare_a_backup.rc != 0 or prepare_a_backup.stderr.split('\n')[-1].find('completed OK') == -1"
   when: inventory_hostname == percona_server_tools_setup_master_replication.inventory.master1
@@ -25,7 +25,7 @@
     - percona-server-tools-setup-master-replication-prepare-the-backup
 
 - name: setup master replication | pull backup
-  command: "rsync -ai --delete -e ssh {{ percona_server_tools_setup_master_replication.inventory.master1.host }}:{{percona_server_tools_setup_slave_replication.innobackupex.backup_dir}}/ {{ percona_server_tools_setup_slave_replication.innobackupex.backup_dir }}"
+  command: "rsync -ai --delete -e ssh {{ percona_server_tools_setup_master_replication.master1.host }}:{{percona_server_tools_setup_master_replication.innobackupex.backup_dir}}/ {{ percona_server_tools_setup_master_replication.innobackupex.backup_dir }}"
   register: pull_backup
   changed_when: pull_backup.stdout_lines | length > 0
   when: inventory_hostname in percona_server_tools_setup_master_replication.inventory.master2
@@ -41,7 +41,7 @@
     - percona-server-tools-setup-master-replication-get-datadir
 
 - name: setup master replication | get master log information
-  command: "cat {{ percona_server_tools_setup_slave_replication.innobackupex.backup_dir }}/xtrabackup_binlog_info"
+  command: "cat {{ percona_server_tools_setup_master_replication.innobackupex.backup_dir }}/xtrabackup_binlog_info"
   register: master_log_information
   changed_when: false
   when: inventory_hostname in percona_server_tools_setup_master_replication.inventory.master2
@@ -71,7 +71,7 @@
     - percona-server-tools-setup-master-replication-stop-service
 
 - name: setup master replication | copy back
-  command: "rsync -ai --delete --exclude 'backup-my.cnf' --exclude 'xtrabackup_*' {{ percona_server_tools_setup_slave_replication.innobackupex.backup_dir }}/ {{ datadir_value.msg.0.1.rstrip('/') }}"
+  command: "rsync -ai --delete --exclude 'backup-my.cnf' --exclude 'xtrabackup_*' {{ percona_server_tools_setup_master_replication.innobackupex.backup_dir }}/ {{ datadir_value.msg.0.1.rstrip('/') }}"
   register: pull_backup
   changed_when: pull_backup.stdout_lines | length > 0
   when: inventory_hostname in percona_server_tools_setup_master_replication.inventory.master2
@@ -87,7 +87,7 @@
     - percona-server-tools-setup-master-replication-set-permissions
 
 - name: setup master replication | pull debian.cnf
-  command: "rsync -ai --delete -e ssh {{ percona_server_tools_setup_master_replication.inventory.master1.host }}:/etc/mysql/debian.cnf /etc/mysql/debian.cnf"
+  command: "rsync -ai --delete -e ssh {{ percona_server_tools_setup_master_replication.master1.host }}:/etc/mysql/debian.cnf /etc/mysql/debian.cnf"
   register: pull_debian_cnf
   changed_when: pull_debian_cnf.stdout_lines | length > 0
   when: inventory_hostname in percona_server_tools_setup_master_replication.inventory.master2
@@ -105,9 +105,9 @@
 - name: setup master replication | change master
   mysql_replication:
     mode: changemaster
-    master_host: "{{ percona_server_tools_setup_master_replication.inventory.master1.host }}"
-    master_user: "{{ percona_server_tools_setup_master_replication.inventory.master1.user }}"
-    master_password: "{{ percona_server_tools_setup_master_replication.inventory.master1.password }}"
+    master_host: "{{ percona_server_tools_setup_master_replication.master1.host }}"
+    master_user: "{{ percona_server_tools_setup_master_replication.master1.user }}"
+    master_password: "{{ percona_server_tools_setup_master_replication.master1.password }}"
     master_log_file: "{{ master_log_information.stdout.split()[0] }}"
     master_log_pos: "{{ master_log_information.stdout.split()[1] }}"
   when: inventory_hostname in percona_server_tools_setup_master_replication.inventory.master2
