--- a/tasks/setup-master-replication.yml
+++ b/tasks/setup-master-replication.yml
@@ -1,5 +1,12 @@
 # tasks file for percona-server-tools
 ---
+- name: setup master replication | check service
+  service:
+    name: mysql
+    state: started
+  tags:
+    - percona-server-tools-setup-master-replication-check-service
+
 - name: setup master replication | create (backup) directory
   file:
     path: "{{ percona_server_tools_setup_master_replication.innobackupex.backup_dir }}"
@@ -40,13 +47,13 @@
   tags:
     - percona-server-tools-setup-master-replication-get-datadir
 
-- name: setup master replication | get master log information
+- name: setup master replication | get master
   command: "cat {{ percona_server_tools_setup_master_replication.innobackupex.backup_dir }}/xtrabackup_binlog_info"
   register: master1_log_information
   changed_when: false
   when: inventory_hostname in percona_server_tools_setup_master_replication.inventory.master2
   tags:
-    - percona-server-tools-setup-master-replication-get-master-log-information
+    - percona-server-tools-setup-master-replication-get-master
 
 - name: setup master replication | stop slave
   mysql_replication:
