--- a/tasks/setup-master-replication.yml
+++ b/tasks/setup-master-replication.yml
@@ -17,6 +17,7 @@
 
 - name: setup master replication | make a backup
   shell: >
+    ulimit -n {{ percona_server_tools_ulimit }} && \
     innobackupex \
       --no-timestamp \
       {% if percona_server_tools_setup_master_replication.innobackupex.user is defined %}--user={{ percona_server_tools_setup_master_replication.innobackupex.user }}{% endif %} \
@@ -32,6 +33,7 @@
 
 - name: setup master replication | prepare the backup
   shell: >
+    ulimit -n {{ percona_server_tools_ulimit }} && \
     innobackupex \
       --apply-log \
       {% if percona_server_tools_setup_master_replication.innobackupex.user is defined %}--user={{ percona_server_tools_setup_master_replication.innobackupex.user }}{% endif %} \
