--- a/tasks/reset-root-password.yml
+++ b/tasks/reset-root-password.yml
@@ -1,18 +1,23 @@
 # tasks file for percona-server-tools
 ---
 - name: reset root password | flush privileges
-  command: "mysql --defaults-file=/etc/mysql/debian.cnf --database=mysql -e \"FLUSH PRIVILEGES;\""
+  command: mysql --defaults-file=/etc/mysql/debian.cnf --database=mysql -e "FLUSH PRIVILEGES;"
   changed_when: false
   tags:
     - percona-server-tools-reset-root-password-flush-privileges
 
 - name: reset root password | login as debian-sys-maint and reset root password
-  command: "mysql --defaults-file=/etc/mysql/debian.cnf --database=mysql -e \"UPDATE `user` SET `Password` = PASSWORD('{{ percona_server_tools_reset_root_password.root_password }}') WHERE `User` = 'root'; SELECT ROW_COUNT();\" --skip-column-names"
+  command: >
+    mysql \
+      --defaults-file=/etc/mysql/debian.cnf \
+      --database=mysql \
+      -e "UPDATE `user` SET `Password` = PASSWORD('{{ percona_server_tools_reset_root_password.root_password }}') WHERE `User` = 'root'; SELECT ROW_COUNT();" \
+      --skip-column-names
   register: rows_affected
   changed_when: "rows_affected.stdout != '0'"
 
 - name: reset root password | flush privileges
-  command: "mysql --defaults-file=/etc/mysql/debian.cnf --database=mysql -e \"FLUSH PRIVILEGES;\""
+  command: mysql --defaults-file=/etc/mysql/debian.cnf --database=mysql -e "FLUSH PRIVILEGES;"
   changed_when: false
   tags:
     - percona-server-tools-reset-root-password-flush-privileges
