--- a/tasks/reset-root-password.yml
+++ b/tasks/reset-root-password.yml
@@ -13,8 +13,8 @@
       --database=mysql \
       -e "UPDATE `user` SET `Password` = PASSWORD('{{ percona_server_tools_reset_root_password.root_password }}') WHERE `User` = 'root'; SELECT ROW_COUNT();" \
       --skip-column-names
-  register: rows_affected
-  changed_when: "rows_affected.stdout != '0'"
+  register: _rows_affected
+  changed_when: "_rows_affected.stdout != '0'"
 
 - name: reset root password | flush privileges
   command: mysql --defaults-file=/etc/mysql/debian.cnf --database=mysql -e "FLUSH PRIVILEGES;"
