Without need for socket

--- a/tasks/reset-root-password.yml
+++ b/tasks/reset-root-password.yml
@@ -39,13 +39,6 @@
     - percona-server-tools-reset-root-password-lt-57
 
 - block:
-  - name: reset root password | get socket
-    mysql_variables:
-      variable: socket
-    register: _socket_value
-    tags:
-      - percona-server-tools-reset-root-password-get-socket
-
   - name: reset root password | stop service
     service:
       name: mysql
@@ -56,19 +49,12 @@
   - name: reset root password | start service without grants and networking
     command: >
       timeout --preserve-status 30s mysqld --skip-grant-tables --skip-networking --user=mysql
-    async: 1000
+    async: 60
     poll: 0
     register: _mysqld_sleeper
     changed_when: false
     tags:
       - percona-server-tools-reset-root-password-start-service
-
-  - name: reset root password | wait for socket
-    wait_for:
-      path: "{{ _socket_value.msg }}"
-      state: present
-    tags:
-      - percona-server-tools-reset-root-password-wait-for-socket
 
   - name: reset root password | set password
     command: >
@@ -77,6 +63,9 @@
         -e "UPDATE `user` SET `authentication_string` = PASSWORD('{{ percona_server_tools_reset_root_password.root_password }}'), plugin = 'mysql_native_password' WHERE `User` = 'root'; SELECT ROW_COUNT();" \
         --skip-column-names
     register: _rows_affected
+    retries: 5
+    delay: 1
+    until: _rows_affected.rc == 0
     changed_when: "_rows_affected.stdout != '0'"
     tags:
       - percona-server-tools-reset-root-password-set-password
@@ -94,6 +83,7 @@
     register: _mysqld_sleeper_result
     until: _mysqld_sleeper_result.finished
     retries: 30
+    delay: 1
     tags:
       - percona-server-tools-reset-root-password-end-service
 
