--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,6 @@
 # tasks file for percona-server-tools
 ---
-- name: reset root password | get mysql version
+- name: get mysql version
   shell: >
     mysqld --version | sed -ne 's/[^0-9]*\(\([0-9]\.\)\{0,4\}[0-9][^.]\).*/\1/p'
   register: _mysql_version
